Small correction and todo question.

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -286,7 +286,7 @@ Agreement with nucleotide alignments
 ------------------------------------
 
 ```{r DNA_prot_comparison}
-(gb_P <- coal)
+(gb_P <- orthoBlocks$Bar_Osa)
 sum(width(gb_P))
 (gb_N <- coa$Bar_Osa)
 sum(width(gb_N))
@@ -300,3 +300,6 @@ sum(gb_P$geneNumber)
 sum(valid$geneNumber)
 sum(width(valid))
 ```
+
+Question: what does interrupt the colinearity of nucleotide regions in gene-centric
+colinear regions ?
