--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -36,6 +36,7 @@ suppressPackageStartupMessages({
   library('BSgenome')
   library('GenomicFeatures')
   library('ggplot2')
+  library("BiocParallel")
 })
 ```
 
@@ -61,7 +62,8 @@ library("BSgenome.Odioica.local.AOM.5")
 library("BSgenome.Odioica.local.Odioica.reference.v3.0")
 ```
 
-For convenience, we provide a `genomes` object containing all the genomes.
+For convenience (such as easy looping, and tab-completion to show the available
+objects), we create a `genomes` list containing all the genomes.
 
 ```{r genomes_object}
 genomes <- SimpleList(
@@ -73,9 +75,9 @@ genomes <- SimpleList(
 ## Genome lengths
 (genome.lengths <- sapply(genomes, \(g) sum(seqlengths(seqinfo(g)))))
 
-## Genome average AT content
-(genomes.AT <- sapply(genomes, \(g)
-  weighted.mean(letterFrequency(getSeq(g), "AT", as.prob = TRUE), seqlengths(g))))
+## Genome average AT content (multicore computation)
+(genomes.AT <- BiocParallel::bplapply(genomes, \(g)
+  weighted.mean(letterFrequency(getSeq(g), "AT", as.prob = TRUE), seqlengths(g))) |> unlist())
 ```
 
 ## Load data
