Signal areas that have not been updated recently.

--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -244,8 +244,11 @@ plot(ade4::newick2phylog(tree))
 
 ## Visualising alignments
 
-We can use the function `scaf_align_plot` to see the alignment of query
+We used the functions `GenomicBreaks::scaf_align_plot()` and
+`GenomicBreaks::align_scaf_plot_2()`to see the alignment of query
 scaffolds/chromosomes onto a specific target scaffold/chromosome of interest.
+
+Now that we have chromosome assemblies these functions are not much used anymore.
 
 ```{r echo=T, message=F, warning=F}
 scaf_align_plot(gbs$Osa_Oki, scaf = "Chr1")
