--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -288,7 +288,7 @@ sapply(gbs, length)
 sapply(coa, length)
 ```
 
-### Width summary plots
+## Width summary plots
 
 The distribution of alignment widths takes a bimodal appearance after
 collapsing.  Is the small peak made of artefacts ?  We will see shortly that the
@@ -326,20 +326,27 @@ First, the distribution of widths is not the same on long and short arms.
 For this reason, it would be unwise to filter by width on some operations such
 as coalescing.
 
-```{r}
+```{r pre_compute_widths_object}
 widths <- SimpleList()
-widths$gbs <- 
-  lapply(names(gbs), \(name) {
-    DF <- mcols(gbs[[name]])
+makeWidthsDF <- function (objList) {
+  lapply(names(objList), \(name) {
+    DF <- mcols(objList[[name]])
     DF$name  <- name
-    DF$width <- width(gbs[[name]])
-    DF$chr   <- seqnames(gbs[[name]])
+    DF$width <- width(objList[[name]])
+    DF$chr   <- seqnames(objList[[name]]) |>  sub(pat = "Chr", rep = "chr")
     DF$query <- DF$score <- NULL
     DF
   }) |> do.call(what=rbind)
+}
 
-widths$gbs$chr <- sub("Chr", "chr", widths$gbs$chr)
+widths$gbs  <- makeWidthsDF(gbs)
+widths$coa  <- makeWidthsDF(coa)
+widths$coa2 <- makeWidthsDF(coa2)
+```
 
+### Aligned regions
+
+```{r widths_gbs}
 gg_freq_poly(widths$gbs) +
   aes(col=Arm) +
   facet_wrap(~chr, scales = "free_y") +
@@ -349,8 +356,9 @@ gg_freq_poly(widths$gbs |> subset(chr == "chr1")) +
   aes(col=Arm) +
   facet_wrap(~name, scales = "free_y", ncol=5) +
   ggtitle("Distribution of alignment widths on chr1 before collapsing, split by genome pair")
-
 ```
+
+### Coalesced regions
 
 After coalescing, width distribution becomes clearly bimodal, when faceted by
 chromosome and arm type.  There is a small peak under 500 bp, found on all arms
@@ -358,12 +366,15 @@ except YSR.  The second peak shows two different distributions for long and
 short arms.
 
 ```{r width_of_coalesced_regions}
-DF <- DataFrame(width = width(coa$Oki_Osa), Arm = coa$Oki_Osa$Arm, chr = seqnames(coa$Oki_Osa))
-
-gg_freq_poly(DF) +
+gg_freq_poly(widths$coa) +
   aes(col=Arm) +
   facet_wrap(~chr, scales = "free_y") +
-  ggtitle("Distribution of alignment width after collapsing, split by arm.") +
+  ggtitle("Distribution of alignment widths after collapsing, split by arm.")
+
+gg_freq_poly(widths$coa |> subset(chr == "chr1")) +
+  aes(col=Arm) +
+  facet_wrap(~name, scales = "free_y", ncol=5) +
+  ggtitle("Distribution of alignment widths on chr1 after collapsing, split by genome pair") +
   geom_vline(xintercept = 500)
 ```
 
@@ -380,15 +391,18 @@ sapply(coa, length)
 sapply(coa2, length)
 ```
 
+### Double-coalesced regions
 
 ```{r re_coalesce}
-DF <- DataFrame(width = width(coa2$Oki_Osa), Arm = coa2$Oki_Osa$Arm, chr = seqnames(coa2$Oki_Osa))
-
-gg_freq_poly(DF) +
+gg_freq_poly(widths$coa2) +
   aes(col=Arm) +
   facet_wrap(~chr, scales = "free_y") +
-  ggtitle("Distribution of alignment width after double-collapsing, split by arm.") +
-  geom_vline(xintercept = 500)
+  ggtitle("Distribution of alignment widths after double-collapsing, split by arm.")
+
+gg_freq_poly(widths$coa2 |> subset(chr == "chr1")) +
+  aes(col=Arm) +
+  facet_wrap(~name, scales = "free_y", ncol=5) +
+  ggtitle("Distribution of alignment widths on chr1 after double-collapsing, split by genome pair") 
 ```
 
 ## Genome plots with genoPlotR
