Check package availability first.

--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -38,6 +38,8 @@ suppressPackageStartupMessages({
   library('ggplot2')
   library("BiocParallel")
 })
+requireNamespace("rGADEM")
+requireNamespace("ggseqlogo")
 ```
 
 ### BSgenome packages
