--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -34,6 +34,9 @@ suppressPackageStartupMessages({
   library('GenomicFeatures')
   library('ggplot2')
 })
+requireNamespace("ggseqlogo")
+requireNamespace("JASPAR2020")
+requireNamespace("rGADEM")
 ```
 
 ### BSgenome packages
