Show that double-coalescing is not enough.

--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -413,13 +413,27 @@ gg_freq_poly(widths$coa2 |> subset(chr == "chr1")) +
 ## Oki – Bar
 
 ```{r parallel_chr_plots_Oki_Bar}
-plotApairOfChrs(coa$Oki_Bar, "chr1")
+plotApairOfChrs(coa$Oki_Bar, "chr1", main = "Oki – Bar")
 ```
 
 ## Osa – Bar
 
 ```{r parallel_chr_plots_Osa_Bar}
-plotApairOfChrs(coa$Osa_Bar, "Chr1")
+plotApairOfChrs(coa$Osa_Bar, "Chr1", main = "Osa – Bar")
+```
+
+## Oki – Kum
+
+The plot is not complete because the Kume assembly is not chromosome-scale.
+
+```{r parallel_chr_plots_Oki_Kum}
+plotApairOfChrs(coa$Oki_Kum, "chr1", main = "Oki – Kum")
+```
+
+Same after double-coalescing.
+
+```{r parallel_chr_plots_Oki_Kum_coa2}
+plotApairOfChrs(coa2$Oki_Kum, "chr1", main = "Oki – Kum")
 ```
 
 ## More in the _parallel plots_ vignette!
